crystal-facet-uml (1.53.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Relationships draw stereotypes as text if no image is defined
  * Default relationship type from SUBSYSTEM is ASSOCIATION, not CONTAINMENT
  * Elements can be selected by click on their label, not only on their symbol
  * The window system shows an icon for the gtk3-window of crystal-facet-uml
  * info: Unit test coverage increased from 21.5 % to 21.8 %

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 30 Sep 2023 19:00:00 +0200

crystal-facet-uml (1.52.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * info: database triggers are re-entrant to allow recursion
  * statistics are with separated lifelines now:
    layout_good_cases: ERR=0, W/C=9, W/F=1, W/L=20, W/R=37
    layout_challenging_cases: ERR=28, W/C=7728, W/F=520, W/L=5406, W/R=4869

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 30 Sep 2023 19:00:00 +0200

crystal-facet-uml (1.52.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Redesign of file-menu icons
  * Lifelines are deleted when the diagram type changes to non-interaction
  * When changing the diagram type, statistics on changes are displayed
  * In interaction diagrams, Stereotypes and Images are co-located to comments
  * info: New database files store ids, types and flags as NOT NULL

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 24 Sep 2023 09:00:00 +0200

crystal-facet-uml (1.51.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Redesign of view-mode icons and stereotype icon
  * No overlap of stereotype icon with comment-corner
  * classifiers of unknown (future) type are drawn as cornerless box and logged
    as anomaly
  * features, relationships, diagrams of unknown type are just anomalies
  * The stereotype field is labelled as such. Exceptions are stated only in the
    user manual.
  * stereotype images are also drawn for diagrams, features and relationships
  * linebreaks in relationship and feature labels